Fixed skip-to-content on smaller screen sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -212,7 +212,7 @@ body {
   color: hsl(var(--clr-dark));
   padding: 0.5em 1em;
   margin-inline: auto;
-  transform: translateY(-100%);
+  transform: translateY(-101%);
   transition: translateY 250ms ease-in;
 }
 
