--- a/scss/utilities/_general.scss
+++ b/scss/utilities/_general.scss
@@ -53,7 +53,7 @@
 	color: hsl(var(--clr-dark));
 	padding: 0.5em 1em;
 	margin-inline: auto;
-	transform: translateY(-100%);
+	transform: translateY(-101%);
 	transition: translateY 250ms ease-in;
 }
 
